{
    "name": "InputActions",
    "maps": [
        {
            "name": "VlatControls",
            "id": "642c6098-82ed-42cf-b600-68fedf660957",
            "actions": [
                {
                    "name": "StickInput",
                    "type": "Value",
                    "id": "b986b2ee-57d2-4bd0-920a-8cc321866fc5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Switch1",
                    "type": "Button",
                    "id": "031b3c3e-de57-4459-b0d2-907ddecd52c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Switch2",
                    "type": "Button",
                    "id": "acfd4668-68f5-45b6-b94e-6648f08964e8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Switch3",
                    "type": "Button",
                    "id": "f94dfefa-fdc9-46ba-9bbd-c4194e119eb5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Switch4",
                    "type": "Button",
                    "id": "4547a9dd-944c-41c2-96f8-403404c271ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchLevel",
                    "type": "Button",
                    "id": "2af11ca3-6f6f-4db7-bc7e-bfd9b4d4d8e1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "07c48c65-5eb3-4c8c-a168-1bd7a3e12df3",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "baedfeab-efb3-4908-9207-85a0c4506683",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ab59da45-ea58-4993-98f3-f0f2af720b08",
                    "path": "<XRController>{LeftHand}/{SecondaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2cbe1365-4ecf-4645-bc3e-42a780683789",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95ffd873-c177-4c7e-95f8-c251d50dc86d",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5f5b1ad-d33f-4556-a870-9a85c4eb15c5",
                    "path": "<XRController>{RightHand}/{PrimaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9bd5de82-969a-44d3-8d45-63700450f0e3",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "161f1163-79d4-4f1c-87e0-5f2768f2d612",
                    "path": "<XInputController>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "caf7fbdc-9c58-438d-a7c6-75f89d8fc046",
                    "path": "<XRController>{RightHand}/{SecondaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74c97900-5384-4e7a-9a7e-1890dc1cbbb7",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b2f6dd5-1f41-4211-b5bc-fc8c6621b3c7",
                    "path": "<XInputController>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StickInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4fe474ae-2699-4773-afe1-a0c9c9239889",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31bfbb7b-e9a9-4d85-948d-a5b55ed60075",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0f4b86c-42ee-4d57-834d-dad41d7662a2",
                    "path": "<XRController>{LeftHand}/{PrimaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch1",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MovementT2",
            "id": "3cd2666b-154a-46cd-a24e-e8e32278a342",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "2f8f7c03-4e4f-47a3-8204-856cb6cc6dbf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LookUp",
                    "type": "Button",
                    "id": "563851b5-0d42-4a80-a6d3-79118aae959c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LookDown",
                    "type": "Button",
                    "id": "0bddb94d-dc95-4d6b-915e-4ba90cecf135",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "800a2d8a-8605-4eec-81dc-fff13732f987",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Menu",
                    "type": "Button",
                    "id": "5110997b-b468-44ac-bade-cd3eb24778b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Switch",
                    "type": "Button",
                    "id": "1c0309ce-ad28-47c7-9391-7fbd329e7ad9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4896be0e-1b40-41f1-ac4a-07f638bdd45f",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0186580b-be07-44be-a0a7-46014692df21",
                    "path": "<Joystick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d0edaa9a-d945-4162-8f97-eb93086f7a2a",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b111663f-b438-4ae4-9c95-592489ea923b",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e92ed35-54dc-4fee-bbbd-95b7c1244fd6",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea0bc520-a8b6-401a-bdfd-90267d6cd29f",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d03fa16-9703-4b4a-9aa9-12603043be27",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}